--- a/workerExample/Dockerfile
+++ b/workerExample/Dockerfile
@@ -8,6 +8,8 @@ ADD lsb.hosts /root
 ADD lsb.queues /root
 ADD lsf.cluster.clusterLSF /root
 
+WORKDIR /root
+
 ## We install all the dependencies
 RUN apt-get update -q && apt-get upgrade -y --no-install-recommends \
     && apt-get install -y vim git wget curl nodejs-legacy npm zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev \
