--- a/workerSparkExample/Dockerfile
+++ b/workerSparkExample/Dockerfile
@@ -9,6 +9,8 @@ ADD lsb.hosts /root
 ADD lsb.queues /root
 ADD lsf.cluster.clusterLSF /root
 
+WORKDIR /root
+
 ## We install all the dependencies
 RUN apt-get update -q \
     && apt-get install -y vim git wget curl zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev libxml2-dev \
