--- a/workerExample/Dockerfile
+++ b/workerExample/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /root
 ## We install all the dependencies
 RUN apt-get update -q && apt-get upgrade -y --no-install-recommends \
     && apt-get install -y vim git wget curl nodejs-legacy npm zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev \
-    && apt-get install -y libcurl4-gnutls-dev tcl-dev psmisc openssh-server \
+    && apt-get install -y libcurl4-gnutls-dev tcl-dev psmisc openssh-server ed \
     && pip install scimath \
     && pip install pymongo \
     && useradd -ms /bin/bash eae
